--- a/Extension/main.html
+++ b/Extension/main.html
@@ -8,39 +8,48 @@
 				background: #f9f9f9;
 				padding: 1px;
 			}
-			
+
 			.title {
 				text-align: center;
 				font-size: 1.9em;
 				color: #d89200;
 			}
-			
+
 			h2, h3, h4 {
 				text-align: center;
 			}
-			
+
 			.datafield {
 				font-size: 1.2em;
 			}
-			
+
 			.datatable {
 				font-size: 1.2em;
 				border: 1px solid black;
 				border-collapse: collapse;
 			}
-			
+
 			.datatable thead {
 				font-weight: 800;
 			}
-			
+
 			.datatable tr {
 				border: 1px solid black;
 			}
-			
+
 			.datatable td {
 				border: 1px solid black;
 			}
-			
+
+			.input-field {
+				text-align: center;
+				border: 1px solid #aaaaaa;
+			}
+
+			.input-field .btn-add-row {
+				border: none;
+			}
+
 			.btn {
 				width: 100%;
 				padding: 3px;
@@ -50,14 +59,33 @@
 				border: 2px solid black;
 				border-radius: 7.5px;
 			}
-			
+
 			.btn:hover {
 				background: #333333;
 				color: #ffffff;
 			}
-			
+
 			.btn:active {
 				background: #888888;
+			}
+
+			.btn:disabled {
+				background: #eeeeee;
+				color: #aaaaaa;
+			}
+
+			input {
+				width: 100%;
+			}
+
+			table {
+				width: 100%;
+			}
+
+			.btn-add-row {
+				width: 100%;
+				padding: 0.2px;
+				margin: 0;
 			}
 		</style>
 	</head>
@@ -68,36 +96,41 @@
 		<h3><span id='done-msg'>Not connected - press Send Data above</span></h3>
 		<hr>
 		<h4 id="more-info"></h4>
-		<button class="btn" id='run-button'>Print</button>
-		<hr>
-		<span id="main-data">
-			<h2>Data Gathered</h2>
-			<h3>Address</h3>
-			<p class="datafield" id="address">
-
-			</p>
-			<h3>Shipping Paid</h3>
-			<p class="datafield" id="shipping">
-
-			</p>
-			<h3>Total Paid</h3>
-			<p class="datafield" id="total">
-
-			</p>
-			<h3>Items Purchased</h3>
-			<table class="datatable">
-				<thead>
-					<tr>
-						<th>Desc</th>
-						<th>Price</th>
-						<th>QTY</th>
-						<th>SKU</th>
-					</tr>
-				</thead>
-				<tbody id="items">
-				</tbody>
-			</table>
+			<button class="btn" id='run-button'>Print</button>
 			<hr>
-		</span>
+			<span id="main-data">
+				<h2>Data Gathered</h2>
+				<h3>Address</h3>
+				<!--<table>
+					<tbody id="address">
+
+					</tbody>
+					<tr>
+						<td class="input-field">
+							<button class="btn-add-row" id="address-row-btn">Add row</button>
+						</td>
+					</tr>
+				</table>-->
+				<textarea id="address" rows="4" cols="60"> </textarea>
+				<h3>Shipping Paid</h3>
+				<input type="text" class="datafield input-field" id="shipping" />
+				<h3>Total Paid (not including shipping)</h3>
+				<input type="text" class="datafield input-field" id="total" />
+				<h3>Items Purchased</h3>
+				<table class="datatable">
+					<thead>
+						<tr>
+							<th>Description</th>
+							<th>Price (Total)</th>
+							<th>QTY</th>
+							<th>SKU</th>
+						</tr>
+					</thead>
+					<tbody id="items">
+					</tbody>
+				</table>
+				<button class="btn-add-row" id="items-row-btn">Add row</button>
+				<hr>
+			</span>
 	</body>
 </html>
