Update to v4.0. Major changes to the way data is transferred and updates to extension

--- a/PrinterPiExtension/main.html
+++ b/PrinterPiExtension/main.html
@@ -50,7 +50,13 @@
 					<button class="btn btn-secondary btn-sm w-100 py-0" id="items-row-btn">Add row</button>
 				</div>
 			</div>
-			<hr>
+			<hr class="py-1 mt-2 mb-0">
+			<div class="row">
+				<div class="col px-3 text-center">
+					<button class="btn btn-sm btn-secondary" id="options-btn">PrinterPi Settings</button>
+				</div>
+			</div>
+			<hr class="py-1 mt-2 mb-0">
 		</div>
 		<script src='./js/main.js'></script>
 		<script src='./js/jquery.min.js'></script>
