--- a/PrinterPiExtension/main.html
+++ b/PrinterPiExtension/main.html
@@ -22,10 +22,14 @@
 			<div class="px-5 py-1 row">
 				<button class="btn btn-sm btn-primary col mx-4" id='envelope-button'>Print Envelope</button>
 			</div>
-			<div class="px-3 py-2 row">
-				<button class="btn btn-sm btn-warning col mx-2" id='parse-button'>Parse Data</button>
-				<button class="btn btn-sm btn-success col mx-2" id='save-button'>Save Data</button>
+			<div class="px-3 pt-2 pb-1 row">
+				<button class="btn btn-sm btn-warning col mx-2" id='parse-button'>Parse Page</button>
+				<button class="btn btn-sm btn-warning col mx-2" id='file-button'>Parse Receipt File</button>
 			</div>
+			<div class="px-3 py-1 row">
+				<button class="btn btn-sm btn-success col mx-2" id='save-button'>Store Data</button>
+			</div>
+			<input type="file" style="display: none" id="file-dialog" accept=".json" />
 
 			<hr class="py-1 my-1">
 			<h5 class="text-center p-0 pt-1 m-0">Address</h5>
