--- a/PrinterPiExtension/main.html
+++ b/PrinterPiExtension/main.html
@@ -36,7 +36,9 @@
 			<textarea class="form-control h-100" rows="4" id="Address"></textarea>
 			<h5 class="text-center p-0 pt-1 m-0">Shipping</h5>
 			<input type="text" class="form-control w-100" id="Shipping" />
-			<h5 class="text-center p-0 pt-1 m-0">Subtotal<p class="text-muted h6">(not including shipping)</p></h5>
+			<h5 class="text-center p-0 pt-1 m-0">Tax</h5>
+			<input type="text" class="form-control w-100" id="Tax" />
+			<h5 class="text-center p-0 pt-1 m-0 mb-1">Subtotal<button class="btn btn-secondary btn-sm p-0 m-0 mx-1" data-toggle="tooltip" data-html="true" title="<em>Item total not including shipping or tax</em>">&#10068</button></h5>
 			<input type="text" class="form-control w-100" id="Subtotal" />
 			<hr class="py-1 mt-2 mb-0">
 			<h5 class="text-center p-0 pt-1 m-0">Items Purchased</h5>
