--- a/PrinterPiExtension/options.html
+++ b/PrinterPiExtension/options.html
@@ -8,6 +8,8 @@
 		<form class="container py-2" style="max-width: 450px" id="settings-form">
 			<h3 class="title text-center font-weight-bold">PrinterPi Settings</h2>
 			<hr class="py-1 my-1">
+			<h6 class="text-center text-muted">Version: 6.0</h6>
+			<hr class="py-1 my-1">
 			<h6 class="text-center"><span id="info-msg">Loading...</span></h6>
 			<hr class="py-1 my-1">
 			<h5 class="text-center p-0 pt-1 m-0">Return Address</h5>
