--- a/PrinterPiExtension/options.html
+++ b/PrinterPiExtension/options.html
@@ -83,7 +83,7 @@
 				</div>
 			</div>
 			<small class="form-text text-muted mt-0 pb-0">
-				Automatically parse page if the data on it is valid. If not, the stored data will be displayed.
+				Automatically parse page if the data on it is valid. If not, the stored data will be displayed and you'll have to manually parse data with "Parse Page".
 			</small>
 			<hr class="py-1 mt-2 mb-0">
 			<div class="px-3 py-1 row">
